--- a/common/header.html
+++ b/common/header.html
@@ -1,5 +1,35 @@
 <div class="background-container"></div>
 
+
+<script type="text/x-handlebars" data-template-name="topic-list-header.raw">
+  {{~raw-plugin-outlet name="topic-list-header-before"~}}
+{{#if bulkSelectEnabled}}
+  <th class="bulk-select">
+    {{#if canBulkSelect}}
+      {{raw "flat-button" class="bulk-select" icon="list" title="topics.bulk.toggle"}}
+    {{/if}}
+  </th>
+{{/if}}
+{{raw "topic-list-header-column" order='default' name=listTitle bulkSelectEnabled=bulkSelectEnabled showBulkToggle=toggleInTitle canBulkSelect=canBulkSelect}}
+{{#if showPosters}}
+  {{raw "topic-list-header-column" order='posters' ariaLabel=(i18n "category.sort_options.posters")}}
+{{/if}}
+{{raw "topic-list-header-column" sortable=sortable number='true' order='posts' name='replies'}}
+{{#if showLikes}}
+  {{raw "topic-list-header-column" sortable=sortable number='true' order='likes' name='likes'}}
+{{/if}}
+{{#if showOpLikes}}
+  {{raw "topic-list-header-column" sortable=sortable number='true' order='op_likes' name='likes'}}
+{{/if}}
+{{raw "topic-list-header-column" sortable=sortable number='true' order='views' name='views'}}
+{{~raw-plugin-outlet name="topic-list-header-after"~}}
+</script>
+
+
+
+
+
+
 <script type="text/x-handlebars" data-template-name="list/topic-list-item.raw">
   {{#if bulkSelectEnabled}}
   <td class="bulk-select">
