--- a/common/header.html
+++ b/common/header.html
@@ -107,3 +107,12 @@ TopicListComponent.reopen({
 {{/if}}
 
 </script>
+
+<script type="text/x-handlebars" data-template-name="list/posts-count-column.raw">
+<{{view.tagName}} class='num posts-map posts {{view.likesHeat}}' title='{{view.title}}'>
+  <button class="btn-link posts-map badge-posts {{view.likesHeat}}">
+    {{raw-plugin-outlet name="topic-list-before-reply-count"}}
+    {{d-icon "comment"}} {{number topic.replyCount noTitle="true" ariaLabel=view.title}}
+  </button>
+</{{view.tagName}}>
+</script>
