--- a/common/header.html
+++ b/common/header.html
@@ -112,7 +112,7 @@ TopicListComponent.reopen({
 <{{view.tagName}} class='num posts-map posts {{view.likesHeat}}' title='{{view.title}}'>
   <button class="btn-link posts-map badge-posts {{view.likesHeat}}">
     {{raw-plugin-outlet name="topic-list-before-reply-count"}}
-    {{d-icon "comment"}} {{number topic.replyCount noTitle="true" ariaLabel=view.title}}
+    {{d-icon "far-comment"}} {{number topic.replyCount noTitle="true" ariaLabel=view.title}}
   </button>
 </{{view.tagName}}>
 </script>
