increased max width

--- a/common/header.html
+++ b/common/header.html
@@ -46,11 +46,11 @@ TopicListComponent.reopen({
 --}}
 <td class='main-link clearfix' colspan="1" role="rowheader">
   <div>
-    <div>
+    <div class= "poster-image float-left">
       <a href="{{topic.posters.[0].user.userPath}}" data-user-card="{{topic.posters.[0].user.username}}">{{avatar topic.posters.[0].user imageSize='small'}}</a>
       {{~raw-plugin-outlet name="topic-list-before-link"}}
     </div>
-    <div>
+    <div class="clearfix">
       <span class='link-top-line'>
         {{~raw-plugin-outlet name="topic-list-before-status"}}
         {{~raw "topic-status" topic=topic}}
