increased max width

--- a/common/header.html
+++ b/common/header.html
@@ -45,11 +45,11 @@ TopicListComponent.reopen({
   at the end of the link, preventing it from line wrapping onto its own line.
 --}}
 <td class='main-link clearfix' colspan="1" role="rowheader">
-  <div class= "poster-image float-left">
+  <div class= "poster-image">
     <a href="{{topic.posters.[0].user.userPath}}" data-user-card="{{topic.posters.[0].user.username}}">{{avatar topic.posters.[0].user imageSize='small'}}</a>
     {{~raw-plugin-outlet name="topic-list-before-link"}}
   </div>
-  <div class="float-left">
+  <div class="topic-details">
     <span class='link-top-line'>
       {{~raw-plugin-outlet name="topic-list-before-status"}}
       {{~raw "topic-status" topic=topic}}
