--- a/common/header.html
+++ b/common/header.html
@@ -131,3 +131,9 @@ TopicListComponent.reopen({
 {{/each}}
 </td>
 </script>
+
+<script type='text/x-handlebars' data-template-name='/connectors/above-site-header/brand-header'>
+  <div id="ember8" class="above-site-header-outlet brand-header ember-view">
+  <div id="ember9" class="ember-view"><header class="b-header clearfix"><div class="wrap"><div class="contents clearfix"><div class="title"><a href="https://ministryoftesting.com"><img src="https://aws1.discourse-cdn.com/business7/uploads/ministryoftesting/original/2X/3/3650e1d805221d2a5444ca87c6adb4499d10169d.svg" alt="MoT" id="brand-logo" class="logo-big"></a></div><nav class="links"><ul class="nav nav-pills"></ul></nav><div class="panel clearfix"><ul class="icons clearfix"><li><a class="widget-link" href="https://www.ministryoftesting.com/dojo/catalog" title="Learn" target=""><svg class="fa d-icon d-icon-graduation-cap svg-icon svg-node" aria-hidden="true"><use xlink:href="#graduation-cap"></use></svg> Learn</a></li><li><a class="widget-link" href="https://ministryoftesting.com/events" title="Events" target=""><svg class="fa d-icon d-icon-calendar-alt svg-icon svg-node" aria-hidden="true"><use xlink:href="#calendar-alt"></use></svg> Events</a></li><li><a class="widget-link" href="https://club.ministryoftesting.com" title="Discussions" target=""><svg class="fa d-icon d-icon-comments svg-icon svg-node" aria-hidden="true"><use xlink:href="#comments"></use></svg> Discussions</a></li></ul></div></div></div></header></div>
+</div>  
+</script>
