--- a/common/footer.html
+++ b/common/footer.html
@@ -1,7 +1,10 @@
 <div id="bottom-navbar" class="row justify-content-center text-center">
     <div id="bottom-navbar-links" class="col-12 social-bar">
         <span id="navbar-center">
-            <a href="https://uk.linkedin.com/company/ministry-of-testing"><i class="fab fa-linkedin fa-lg"></i></a>
+          <svg class="fa d-icon d-icon-arrow-left svg-icon svg-node" aria-hidden="true"><use xlink:href="#arrow-left"></use></svg>
+            <a href="https://uk.linkedin.com/company/ministry-of-testing">
+              <svg class="fab d-icon d-icon-linkedin svg-icon svg-node" aria-hidden="true"><use xlink:href="#arrow-left"></use></svg>
+            </a>
             <a href="https://twitter.com/ministryoftest"><i class="fab fa-twitter fa-lg"></i></a>
             <a href="https://www.instagram.com/ministryoftesting/"><i class="fab fa-instagram fa-lg"></i></a>
         </span>
