trying to fix logos

--- a/common/footer.html
+++ b/common/footer.html
@@ -1,12 +1,9 @@
 <div id="bottom-navbar" class="row justify-content-center text-center">
     <div id="bottom-navbar-links" class="col-12 social-bar">
         <span id="navbar-center">
-          <svg class="fa d-icon d-icon-arrow-left svg-icon svg-node" aria-hidden="true"><use xlink:href="#arrow-left"></use></svg>
-            <a href="https://uk.linkedin.com/company/ministry-of-testing">
-              <svg class="fab d-icon d-icon-linkedin svg-icon svg-node" aria-hidden="true"><use xlink:href="#arrow-left"></use></svg>
-            </a>
-            <a href="https://twitter.com/ministryoftest"><i class="fab fa-twitter fa-lg"></i></a>
-            <a href="https://www.instagram.com/ministryoftesting/"><i class="fab fa-instagram fa-lg"></i></a>
+          <svg class="fab d-icon d-icon-linkedin svg-icon svg-node" aria-hidden="true"><use xlink:href="https://uk.linkedin.com/company/ministry-of-testing"></use></svg>
+          <a href="https://twitter.com/ministryoftest"><i class="fab fa-twitter fa-lg"></i></a>
+          <a href="https://www.instagram.com/ministryoftesting/"><i class="fab fa-instagram fa-lg"></i></a>
         </span>
     </div>
 </div>
