trying to fix logos

--- a/common/footer.html
+++ b/common/footer.html
@@ -2,7 +2,7 @@
     <div id="bottom-navbar-links" class="col-12 social-bar">
         <span id="navbar-center">
           <a href="https://uk.linkedin.com/company/ministry-of-testing">
-            {{d-icon "linkedin"}}
+            <svg class="fab d-icon d-icon-linkedin svg-icon svg-node" aria-hidden="true"><use xlink:href="#fab-linkedin"></use></svg>
           </a>
           <a href="https://twitter.com/ministryoftest"><i class="fab fa-twitter fa-lg"></i></a>
           <a href="https://www.instagram.com/ministryoftesting/"><i class="fab fa-instagram fa-lg"></i></a>
