--- a/common/footer.html
+++ b/common/footer.html
@@ -1,11 +1,14 @@
 <div id="bottom-navbar" class="row justify-content-center text-center">
-    <div id="bottom-navbar-links" class="col-12 social-bar">
-        <span id="navbar-center">
+    <div id="bottom-navbar-links" class="col-12 social-bar text-center">
           <a href="https://uk.linkedin.com/company/ministry-of-testing">
             <svg class="fab d-icon d-icon-linkedin svg-icon svg-node" aria-hidden="true"><use xlink:href="#fab-linkedin"></use></svg>
           </a>
-          <a href="https://twitter.com/ministryoftest"><i class="fab fa-twitter fa-lg"></i></a>
-          <a href="https://www.instagram.com/ministryoftesting/"><i class="fab fa-instagram fa-lg"></i></a>
+          <a href="https://twitter.com/ministryoftest">
+            <svg class="fab d-icon d-icon-twitter svg-icon svg-node" aria-hidden="true"><use xlink:href="#fab-twitter"></use></svg>
+          </a>
+          <a href="https://www.instagram.com/ministryoftesting/">
+            <svg class="fab d-icon d-icon-instagram svg-icon svg-node" aria-hidden="true"><use xlink:href="#fab-instagram"></use></svg>
+          </a>
         </span>
     </div>
 </div>
