--- a/common/header.html
+++ b/common/header.html
@@ -137,3 +137,34 @@ TopicListComponent.reopen({
   <div id="ember9" class="ember-view"><header class="b-header clearfix"><div class="wrap"><div class="contents clearfix"><div class="title"><a href="https://ministryoftesting.com"><img src="https://aws1.discourse-cdn.com/business7/uploads/ministryoftesting/original/2X/3/3650e1d805221d2a5444ca87c6adb4499d10169d.svg" alt="MoT" id="brand-logo" class="logo-big"></a></div><nav class="links"><ul class="nav nav-pills"></ul></nav><div class="panel clearfix"><ul class="icons clearfix"><li><a class="widget-link" href="https://www.ministryoftesting.com/dojo/catalog" title="Learn" target=""><svg class="fa d-icon d-icon-graduation-cap svg-icon svg-node" aria-hidden="true"><use xlink:href="#graduation-cap"></use></svg> Learn</a></li><li><a class="widget-link" href="https://ministryoftesting.com/events" title="Events" target=""><svg class="fa d-icon d-icon-calendar-alt svg-icon svg-node" aria-hidden="true"><use xlink:href="#calendar-alt"></use></svg> Events</a></li><li><a class="widget-link" href="https://club.ministryoftesting.com" title="Discussions" target=""><svg class="fa d-icon d-icon-comments svg-icon svg-node" aria-hidden="true"><use xlink:href="#comments"></use></svg> Discussions</a></li></ul></div></div></div></header></div>
 </div>  
 </script>
+
+<script type="text/discourse-plugin" version="0.4">
+const { iconNode } = require("discourse-common/lib/icon-library");
+api.decorateWidget('header-icons:before', helper => {
+    return helper.h('li', [
+        helper.h('a#home-button.icon', {
+            href:'https://www.ministryoftesting.com/',
+            title: 'Back to The Ministry of Testing Website'
+        }, iconNode('home', {class: 'home-button-icon'})),
+    ]);
+});
+api.decorateWidget('header-icons:before', helper => {
+    return helper.h('li', [
+        helper.h('a#slack-button.icon', {
+            href:'https://www.ministryoftesting.com/slack_invite',
+            title: 'Join Our Slack Group',
+            target: '_blank'
+        }, iconNode('fab-slack', {class: 'slack-button-icon'})),
+    ]);
+});
+api.decorateWidget('header-icons:before', helper => {
+    return helper.h('li', [
+        helper.h('a#paper-plane.icon', {
+            href:'https://help.ministryoftesting.com/collection/5-community',
+            title: 'Get Support on How To Use The Club',
+            target: '_blank'
+        }, iconNode('far-paper-plane', {class: 'paper-plane-icon'})),
+    ]);
+});
+</script>
+<link rel="stylesheet" media="screen" href="//use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
