adding icons to nav

--- a/common/footer.html
+++ b/common/footer.html
@@ -11,3 +11,7 @@
     </a>
   </div>
 </div>
+
+<footer class="d-footer">
+    A Ministry of Testing Production. &copy; 2010-2021 Ministry of Testing Ltd. All rights reserved.
+</footer>
