added header to above main controller

--- a/common/header.html
+++ b/common/header.html
@@ -175,3 +175,7 @@ TopicListComponent.reopen({
     </div>
   {{/each}}
 </script>
+
+<script type="text/x-handlebars" data-template-name="components/above-main-container">
+  <h1> HELLO WORLD!</h1>
+</script>
