--- a/common/header.html
+++ b/common/header.html
@@ -177,7 +177,7 @@ TopicListComponent.reopen({
 </script>
 
 <script type="text/x-handlebars" data-template-name="connectors/above-main-container/welcome-message">
-  {{#if currentUser}}
+  {{#unless currentUser}}
     <h1> HELLO WORLD!</h1>
-  {{/if}}
+  {{/unless}}
 </script>
