--- a/common/header.html
+++ b/common/header.html
@@ -180,9 +180,15 @@ TopicListComponent.reopen({
   {{#if currentUser}}
     <div class="welcome-message">
       <div class="welcome-message-container">
-        <h1>Welcome to The Club</h1>
-        <p>Ask questions, share feedback, and connect with the Ministry of Testing Community.</p>
+        <div>
+          <h1>Welcome to The Club</h1>
+          <p>Ask questions, share feedback, and connect with the Ministry of Testing Community.</p>
+        <div>
+        <div>
+          <img class="welcome-image" src="https://aws1.discourse-cdn.com/business7/uploads/ministryoftesting/original/2X/5/53d94412c78fc184d44d547cfa27672ab2fdac57.png">
+        </div>
       </div>
+      content: url(https://aws1.discourse-cdn.com/business7/uploads/ministryoftesting/original/2X/5/53d94412c78fc184d44d547cfa27672ab2fdac57.png);
     </div>
   {{/if}}
 </script>
