--- a/common/header.html
+++ b/common/header.html
@@ -185,9 +185,9 @@ TopicListComponent.reopen({
       <div class="header-container">
         <h1>Welcome to The Club</h1>
         <p>Ask questions, share feedback, and connect with the Ministry of Testing Community.</p>
-        {{#unless currentUser}}
+        {{#if currentUser}}
           {{showLogin=(route-action "showLogin")}}
-        {{/unless}}
+        {{/if}}
       </div>
     </div>
   </div>  
