--- a/common/header.html
+++ b/common/header.html
@@ -186,7 +186,7 @@ TopicListComponent.reopen({
         <h1>Welcome to The Club</h1>
         <p>Ask questions, share feedback, and connect with the Ministry of Testing Community.</p>
         {{#if currentUser}}
-          {{showLogin=(route-action "showLogin")}}
+          {{d-button class="btn-primary" action=(route-action "showLogin") label="log_in"}}
         {{/if}}
       </div>
     </div>
