--- a/common/header.html
+++ b/common/header.html
@@ -192,3 +192,33 @@ TopicListComponent.reopen({
     </div>
   </div>
 </script>
+
+
+<script type="text/x-handlebars" data-template-name="templates/mobile/components/categories-only">
+  {{#if categories}}
+    {{#if filteredCategories}}
+      <div class="category-list {{if showTopics "with-topics"}}">
+        <h1>Richard</h1>
+        {{#each filteredCategories as |c|}}
+          {{parent-category-row category=c showTopics=showTopics}}
+        {{/each}}
+      </div>
+    {{/if}}
+
+    {{#if mutedCategories}}
+      <div class="muted-categories">
+        <a href class="muted-categories-link" {{action "toggleShowMuted"}}>
+          <h3 class="muted-categories-heading">{{i18n "categories.muted"}}</h3>
+          {{#if mutedToggleIcon}}
+            {{d-icon mutedToggleIcon}}
+          {{/if}}
+        </a>
+        <div class="category-list {{if showTopics "with-topics"}} {{unless showMutedCategories "hidden"}}">
+          {{#each mutedCategories as |c|}}
+            {{parent-category-row category=c showTopics=showTopics listType="muted"}}
+          {{/each}}
+        </div>
+      </div>
+    {{/if}}
+  {{/if}}
+</script>
