mobile category view

--- a/common/header.html
+++ b/common/header.html
@@ -8,7 +8,8 @@ TopicListComponent.reopen({
 </script>
 
 <script>
-var MobileCategoryComponent = require('discourse/templates/mobile.components/categories-only').default;
+var MobileCategoryComponent = require('discourse/javascripts/templates/mobile/components/categories-only.hbs
+').default;
 MobileCategoryComponent.reopen({
     showTopics: false
 });
